[package]
name = "masm-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
"default" = ["serde"]
"serde" = ["dep:serde", "masm-location/serde"]

[dependencies]
masm-location = { path = "../masm-location", default-features = false }
thiserror = "1.0.38"
serde = { version = "1.0.152", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0.91" }
anyhow = "1.0.68"
test-utils = { path = "../../test-utils" }
