[package]
name = "masm-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
masm-lexer = { path = "../masm-lexer" }
masm-location = { path = "../masm-location" }

[dev-dependencies]
serde_json = { version = "1.0.91" }
anyhow = "1.0.68"
test-utils = { path = "../../test-utils" }
